# aether

./: .env.example  .gitignore  CLAUDE.md  README.md  aether-release.keystore  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml  release-desktop.yml
backend/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
backend/config/: config.go
backend/database/: database.go
backend/handlers/: activity.go  chat.go  desktop_auth.go  entities.go  graph.go  labels.go  notes.go  search.go  sse.go  synthesis.go  users.go  vaults.go
backend/middleware/: auth.go  vault.go
backend/models/: activity_log.go  chat_message.go  entity.go  label.go  note.go  note_relation.go  note_revision.go  synthesis_page.go  user.go  vault.go
docs/: appstore-metadata.md
extension/: manifest.json  privacy-policy.html
extension/background/: service-worker.js
extension/content/: token-bridge.js
extension/lib/: api.js  auth.js  constants.js  storage.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  (+2 more)
frontend/: Dockerfile  capacitor.config.json  capacitor.config.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
infrastructure/: docker-compose.yml
landing/: Dockerfile  index.html  privacy-policy.html  support.html
worker/: Dockerfile  celery_app.py  embedding_server.py  entrypoint.sh  requirements.txt  start.sh  tasks.py
(+64 files in other folders)
