[package]
name = "aether-desktop"
version = "1.4.1"
description = "Aether — Personal Knowledge Engine"
authors = ["Bugra Cakmak"]
edition = "2021"

[lib]
name = "aether_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
# tauri-plugin-updater = "2"  # Add later for auto-update
serde = { version = "1", features = ["derive"] }
serde_json = "1"
